# SubTrackr

./: .detoxrc.js  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitleaks.baseline.toml  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .releaserc  .semgrepignore  .size-limit.json  AGENTS.md  App.tsx  BUILD_FIX_GUIDE.md  BUNDLE_AUDIT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DESIGN_SYSTEM_IMPLEMENTATION.md  DESIGN_SYSTEM_INTEGRATION.md  DESIGN_SYSTEM_SETUP.md  Dockerfile  FORMATTING.md  IMPLEMENTATION_README.md  JS_BUNDLE_FIX.md  MUTATION_TESTING_IMPLEMENTATION.md  MUTATION_TESTING_QUICKREF.md  PR_BODY_SUBSCRIPTION_ADVANCED_SEARCH.md  PR_CI_Optimizations.md  QUICK_START.md  RACE_CONDITION_FIX.md  README.md  TODO.md  WCAG_COMPLIANCE.md  app.config.js  app.json  audit-ci.json  babel.config.js  build-release.sh  (+45 more)
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bundle-analysis.yml  cdn-deploy.yml  chaos-core.yml  chaos.yml  ci-core.yml  ci.yml  contracts-core.yml  db-migration.yml  deploy-core.yml  deploy.yml  e2e-core.yml  e2e-detox.yml  fuzz-core.yml  fuzz-test.yml  i18n-core.yml  i18n.yml  integration-tests.yml  invariant-tests.yml  lighthouse.yml  mutation-testing.yml  notification-service.yml  release-core.yml  release.yml  sdk-core.yml  (+7 more)
.husky/: pre-commit
.semgrep/: semgrep-suppressions.yml  subtrackr.yml
.storybook/: 20260625_rbac_tables.sql  PermissionRegistry.js  main.js  preview.js  rbacMiddleware.js  rbacMiddleware.ts
backend/: server.ts  tsconfig.json
chaos/: runner.ts
contracts/: .gitignore  Cargo.toml  DEPLOYMENT.md  TEMPLATE_SYSTEM.md  clippy_output.txt
contracts/access_control/: Cargo.toml
contracts/access_control/src/: lib.rs  roles.rs  test.rs
contracts/api/: Cargo.toml
contracts/api/src/: auth.rs  lib.rs  ratelimit.rs  test.rs
contracts/credit/: Cargo.toml
contracts/credit/src/: lib.rs  test.rs
contracts/fraud/: Cargo.toml
contracts/fraud/src/: lib.rs
contracts/fuzz/: .gitignore  Cargo.toml  FUZZING.md
contracts/fuzz/corpus/subscription_lifecycle/: create_subscribe_charge.seed
contracts/fuzz/corpus/subscription_pricing/: pricing-boundaries.seed
contracts/fuzz/corpus/subscription_rate_limits/: rate-limit.seed
contracts/fuzz/fuzz_targets/: common.rs  pricing.rs  rate_limit.rs  reentrancy_fuzz.rs  state_machine.rs  subscription.rs  subscription_lifecycle.rs  subscription_pricing.rs  subscription_rate_limits.rs  utils.rs
contracts/fuzz/scripts/: triage-crash.sh
contracts/invoice/: Cargo.toml
contracts/invoice/src/: lib.rs  pdf.rs
contracts/invoice/test_snapshots/tests/: generates_invoice_with_tax_and_numbering.1.json  pdf_contains_invoice_summary.1.json
contracts/security/: Cargo.toml  README.md
contracts/security/src/: encryption.rs  lib.rs
contracts/sla/: Cargo.toml
contracts/sla/src/: lib.rs
contracts/sla/test_snapshots/test/: breach_detection_records_credit_and_notification_event.1.json  config_and_status_start_compliant.1.json  maintenance_does_not_count_as_downtime.1.json
contracts/subscription/: Cargo.toml  FUZZING.md  GAS_OPTIMIZATION_ANALYSIS.md  STORAGE.md  THREAT_MODEL.md
contracts/subscription/certora/: SubTrackrSubscription.spec
contracts/subscription/docs/: MEV_THREAT_MODEL.md
contracts/subscription/specs/: core-spec.md
contracts/subscription/src/: billing.rs  cancellation.rs  charging.rs  errors.rs  event_store.rs  events.rs  gas_optimization.rs  gas_profiler.rs  gas_storage.rs  lib.rs  loyalty.rs  payment_methods.rs  pricing.rs  proration.rs  quota.rs  reentrancy.rs  retention.rs  revenue.rs  state.rs  test.rs  timeout.rs  usage.rs  webhook.rs
contracts/subscription/tests/: fuzz_smoke.rs  property_invariants.rs  template_test.rs
db/: QUERY_OPTIMIZATION.md
developer-portal/: README.md  index.ts
docker/: backend.Dockerfile  entrypoint.sh  ml.Dockerfile  stellar-standalone.Dockerfile
docs/: ACCESSIBILITY_COLOR_CONTRAST.md  ACCESSIBILITY_GUIDE.md  API.md  DISASTER_RECOVERY_RUNBOOK.md  SECURITY.md  TYPES_MIGRATION.md  VSCode_EXTENSION.md  api-logging.md  dev-builds.md  distributed-tracing.md  e2e-deterministic-testing.md  gdpr.md  hermes-differential-bytecode.md  i18n.md  incremental-export.md  load-testing.md  mutation-testing.md  offline-architecture.md  openapi.yaml  permissions.md  pii-classification.md  screen-templates.md  security-dashboard.md  security.md  store-migration.md
e2e/: README.md  jest.config.js  launch.test.ts  payment.test.ts  setup.ts  subscription-lifecycle.test.ts  subscription.test.ts  visual-regression.test.ts
emails/: group-invite-template.html
gas-benchmarks/: README.md
infra/: README.md  docker-compose.observability.yml  otel-collector-config.yaml  tempo.yaml
k8s/: webhook-dispatcher-hpa.yaml
load-tests/: README.md  SCALABILITY.md  baseline.json  run.js
ml-service/: Dockerfile  README.md  feature_client.py  main.py  model_registry.py  model_versions.json  requirements.txt  retrain.py
perf/: baseline.json  metrics.sample.json
plugins/: withKotlinVersion.js
sandbox/: docker-compose.sandbox.yml  index.ts
scripts/: analyze-equivalent-mutants.js  analyze-gas.py  benchmark-gas-accuracy.ts  check-performance-budget.js  db-expand-migrate-contract.js  db-migrate-dryrun.js  db-migration-lint.js  db-schema-drift.js  deploy-fastly-vcl.sh  deploy-local.sh  deploy-mainnet.sh  deploy-testnet.sh  gas-benchmark.sh  generate-mutation-report.js  generate-sdks.js  generate-statechart.sh  i18n-extract.js  i18n-lint.js  isr-validate.js  migrate-stores.js  package-source.sh  patch-metro-exports.js  patch-metro.js  pre-commit-gitleaks.sh  quantize-models.sh  revoke-stellar-key.sh  rollback-migration.sh  run-incremental-mutation.js  run-migration.sh  sdk-generate.sh  security-dashboard.py  setup.sh  test-integration.sh  utils.sh  validate-migration.sh  verify.sh  zap-baseline-scan.sh
spec/: openapi.yaml
src/: README.md  test-utils.tsx
vscode-extension/: .mock.json  package.json
(+1267 files in other folders)
