[package]
name = "subtrackr-api"
version = "0.1.0"
edition = "2021"
authors = ["SubTrackr Team"]
description = "SubTrackr API key management and rate limiting contract (Soroban)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"
subtrackr-types = { path = "../types" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
