[package]
name = "subtrackr-sla"
version = "0.2.0"
edition = "2021"
authors = ["SubTrackr Team"]
description = "SLA monitoring contract for SubTrackr (Soroban)"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
